--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -7,7 +7,7 @@
 <p>This task is not yet completed</p>
 <% end %>
 <hr>
-<%= link_to "Edit task", edit_path %>
+<%= link_to "Edit task", edit_task_path %>
 <%= link_to "Delete",
   task_path(@task),
   data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
